--- a/README.mkd
+++ b/README.mkd
@@ -6,9 +6,9 @@ local development and testing.
 
 ## Description of Demo Applications
 
-1- [DemoApp-01: Local deployment example](/DemoApp-01): This is a simple demo application that demonstrates local deployment to Google Cloud Run using the `gcloud` command-line tool.
+1. [DemoApp-01: Local deployment example](/DemoApp-01): This is a simple demo application that demonstrates local deployment to Google Cloud Run using the `gcloud` command-line tool.
 
-2- [DemoApp-02: Local deployment with script-based automation](/DemoApp-02): This demo application shows how to use scripts to automate the deployment process.
+2. [DemoApp-02: Local deployment with script-based automation](/DemoApp-02): This demo application shows how to use scripts to automate the deployment process.
 
 ## How to Use This Repository
 Each demo application is contained in its own folder (e.g., DemoApp-01, DemoApp-02).
