--- a/README.mkd
+++ b/README.mkd
@@ -1,28 +1,23 @@
 # Google Cloud Run Experiments
 
-This repository contains a series of experiments and demo applications to explore deployment
-of aplications to Google Cloud Run, using docker containers, and unsing docker containers for 
-local development and testing. 
+This repository contains a series of experiments and demo applications to explore development with Google Cloud Run.
 
 ## Description of Demo Applications
 
 1. [DemoApp-01: Local deployment example](/DemoApp-01): This is a simple demo application that demonstrates local deployment to Google Cloud Run using the `gcloud` command-line tool.
-
 2. [DemoApp-02: Local deployment with script-based automation](/DemoApp-02): This demo application shows how to use scripts to automate the deployment process.
 
 ## How to Use This Repository
 Each demo application is contained in its own folder (e.g., DemoApp-01, DemoApp-02).
-
 Start by installing Docker, VSCode, Git (optional) in your local development environment.
 
 Start VSCode, install the "Remote - Containers" extension.
 Use VSCode to start a new terminal:
-	Go: Terminal-> New Terminal
-	It may start in something like: C:\Users\YourName\
+- Go: Terminal-> New Terminal
+	- It may start in something like: C:\Users\YourName\
 	
-Create a new folder for this repository and navigate into it:
-
-Windows/Linux:
+- Create a new folder for this repository and navigate into it:
+	- Windows/Linux:
 		```
 		mkdir gcp-series
 		cd gcp-series
